2003-03-13	fabian
    * Added a new option to allow opening the address book
      window when startup.
    * Change version number to 0.6.5
    * Localized GPL license statement for zh_CN and zn_TW
    
2003-03-12	fabian
    * Fixed a bug that causes incorrect process of color.
    * Cleaned up the color code
    * Fixed a bug related to reversed video mode.
    * Changed default black color to pure black.
    * Fixed some timer settings
    
2003-03-11	fabian
    * Changed the color code. Now we no longer have fixed
      bold text color. Instead, it's calculated from the
      base color. So we can choose whatever color we want
      again.
      
2003-03-10	fabian
    * Rewrite the color stuff in emulation code. Now we
      use seperate color table for normal and bold text.
      We now will using high color to indicate bold. Also,
      the color table will make the future implementation
      of customized ANSI color easier.
      Limitations: Any color you select for FG/BG will be
      converted to the closest color in the colorTable.
      Aslo, currently FG color will have no alpha.
    * Fixed a display problem when change FG/BG colors or
      Transparency.
    * Implemented ANSI code VPA and VPR, to fix one user's
      problem with Debian programs.
    * Fixed a blinking bug
    * Implemented ANSI code ECH
      
2003-03-10	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added some missing semi-colons in Chinese strings files.


2003-03-08	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed an issue where '=', '/', and '*' could not be 
      typed from numeric keypad. This was because those 
      keys were mapped to the PF2, PF3, PF4 keys. Now we 
      have a numLock state that is on by default. When 
      state is enabled, numeric keypad has the default 
      operation. When it is disabled, the keys 
      'numlock', '=', '/', and '*' send PF1, PF2, PF3, 
      and PF4 sequences. The state can be toggled by using 